@@ -2563,6 +2563,35 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// Set the address for now even tho it will not be persisted on
+comment|// the HRS side.
+name|String
+name|rsAddress
+init|=
+name|Server
+operator|.
+name|getRemoteAddress
+argument_list|()
+decl_stmt|;
+name|serverInfo
+operator|.
+name|setServerAddress
+argument_list|(
+operator|new
+name|HServerAddress
+argument_list|(
+name|rsAddress
+argument_list|,
+name|serverInfo
+operator|.
+name|getServerAddress
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 comment|// register with server manager
 name|serverManager
 operator|.
@@ -2597,6 +2626,40 @@ operator|.
 name|HBASE_DIR
 argument_list|)
 decl_stmt|;
+comment|// Get the real address of the HRS.
+name|String
+name|rsAddress
+init|=
+name|Server
+operator|.
+name|getRemoteAddress
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|rsAddress
+operator|!=
+literal|null
+condition|)
+block|{
+name|mw
+operator|.
+name|put
+argument_list|(
+operator|new
+name|Text
+argument_list|(
+literal|"hbase.regionserver.address"
+argument_list|)
+argument_list|,
+operator|new
+name|Text
+argument_list|(
+name|rsAddress
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|addConfig
 argument_list|(
